--- a/fourier.html
+++ b/fourier.html
@@ -2,19 +2,8 @@
 <html>
 <head>
 	<title>Fourier Visulization</title>
-	<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-	
-	
 </head>
 <body>
-
-	<canvas id="myCanvas" width="1000" height="900" style="border:1px solid #000000;">
-	</canvas>
-
-
-	<script type="text/javascript" src="plot_anim.js"></script>
+	<script type="text/javascript" src="anim.js"></script>
 </body>
 </html>
