Changed for rewritten js script

--- a/fourier.html
+++ b/fourier.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Fourier Visulization</title>
+	<title></title>
 </head>
 <body>
-	<script type="text/javascript" src="anim.js"></script>
+
+
+	<div id="draw"></div>
+
+
+	<script type="text/javascript" src="action.js"></script>
 </body>
 </html>
